# GameEngine-FeelingLoopy

./: .gitignore  CMakeLists.txt  Engine.md
src/: input.cpp  input.h  input_handler.cpp  input_handler.h  keyboardInput.cpp  keyboardInput.h  main.cpp
src/engine/: collision.cpp  collision.h  engine.cpp  engine.h  entity.cpp  entity.h  physics.cpp  physics.h  scaling.cpp  scaling.h
src/entity/: Entity.cpp  collision.cpp  entity.h
